# revo_simulation

./: README.md
scipio_simulation/: package.xml
scipio_simulation/launch/: gazebo.launch
scipio_simulation/meshes/: back_left_wheel_link.DAE  back_right_wheel_link.DAE  front_left_wheel_link.DAE  front_right_wheel_link.DAE
scipio_simulation/sdf/: scipio_simulation_from_sdf.urdf
