<?xml version="1.0"?>
<package>
  <name>scipio_simulation</name>
  <version>0.9.0</version>
  <description>The scipio_simulation package</description>

  <maintainer email="krgebis@gmail.com">Krystian-L0g1x</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hector_gazebo_plugins</build_depend>
  <!-- package "scipio_simulation" should not depend on metapackage "gazebo_ros_pkgs" but on its packages instead
  <build_depend>gazebo_ros_pkgs</build_depend> -->
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>gazebo_ros_pkgs</run_depend>
</package>
